image/v4/getting-started/frameworks.md
---
title: "Framework Integration"
subtitle: "Integration in your Favorite Framework"
lead: "Explore how to integrate Intervention Image with Laravel, Symfony or Tempest framework using the official integration packages. Learn to set up configuration files, select drivers and leverage features like auto-orientation, decoding animations, and background color."
sort: 3
---

[TOC]

## Laravel

Intervention Image can be easily integrated into a Laravel application with the
[official integration package](https://github.com/Intervention/image-laravel). This package
provides a Laravel service provider, facade, publishable configuration
file, and more.

### Installation

Instead of installing Intervention Image directly, it is only necessary to integrate
the `intervention/image-laravel` package. The corresponding base libraries are automatically
installed as well.

```bash
composer require intervention/image-laravel
```

### Application-wide Configuration

This package includes a global configuration file that Laravel recognizes.
This allows you to store the settings for Intervention Image
centrally without having to define them individually each time you call the
image manager.

You can copy the configuration file to your application with the following command.

```bash
php artisan vendor:publish --provider="Intervention\Image\Laravel\ServiceProvider"
```

This command will publish the configuration file `config/intervention-image.php`. Here you
can set the desired driver and its configuration options for Intervention
Image. By default, the library is configured to use the GD library for image
processing.

The configuration file has the following structure:

```php
return [

    /*
    |--------------------------------------------------------------------------
    | Image Driver
    |--------------------------------------------------------------------------
    |
    | Intervention Image supports “GD Library” and “Imagick” to process images
    | internally. Depending on your PHP setup, you can choose one of them.
    |
    | Included options:
    |   - \Intervention\Image\Drivers\Gd\Driver::class
    |   - \Intervention\Image\Drivers\Imagick\Driver::class
    |   - \Intervention\Image\Drivers\Vips\Driver::class
    |
    */

    'driver' => env('IMAGE_DRIVER', \Intervention\Image\Drivers\Gd\Driver::class),

    /*
    |--------------------------------------------------------------------------
    | Configuration Options
    |--------------------------------------------------------------------------
    |
    | These options control the behavior of Intervention Image.
    |
    | - "autoOrientation" controls whether an imported image should be
    |    automatically rotated according to any existing Exif data.
    |
    | - "decodeAnimation" decides whether a possibly animated image is
    |    decoded as such or whether the animation is discarded.
    |
    | - "backgroundColor" Defines the default background & blending color.
    |
    | - "strip" controls if meta data like exif tags should be removed when
    |    encoding images.
    */

    'options' => [
        'autoOrientation' => true,
        'decodeAnimation' => true,
        'backgroundColor' => 'ffffff',
        'strip' => false,
    ]
];
```

You can read more about the different options for
[driver selection](/v4/basics/configuration-drivers#driver-selection), setting options for 
[auto orientation](/v4/modifying-images/effects#image-orientation-according-to-exif-data), 
[decoding animations](/v4/modifying-images/animations) and 
[background color](/v4/basics/colors).

### Static Facade Interface

This package also integrates access to Intervention Image's central entry
point, the `ImageManager::class`, via a static [facade](https://laravel.com/docs/facades). The call provides access to the
centrally configured [image manager](/v4/basics/instantiation) via singleton pattern.

The following code example shows how to read an image from an upload request using
the image facade in a Laravel route and save it to disk with a random file
name.

```php
use Illuminate\Http\Request;
use Illuminate\Support\Facades\Route;
use Illuminate\Support\Facades\Storage;
use Illuminate\Support\Str;
use Intervention\Image\Laravel\Facades\Image;

class ImageController extends Controller
{
    /**
     * Handle image upload.
     */
    public function handleImageUpload(Request $request): RedirectResponse
    {
        $upload = $request->file('image');
        $storagePath = Str::random() . '.' . $upload->getClientOriginalExtension();

        $image = Image::decode($upload)
            ->scale(height: 300)
            ->encode();

        Storage::put($storagePath, $image);
    }
}
```

### Dependency Injection

The Laravel integration package creates a binding for a fully configured [image manager](/v4/basics/instantiation).

The image manager can be used by resolving either `Intervention\Image\ImageManager` or `Intervention\Image\Interfaces\ImageManagerInterface` at various points in the application via dependency injection, resulting in a manager instance based on the application-wide image configuration.

The following example illustrates this using a controller.

```php
use Intervention\Image\Interfaces\ImageManagerInterface;
use Illuminate\Http\Request;
use Illuminate\Http\RedirectResponse;
use Illuminate\Support\Str;

class ImageController extends Controller
{
    /**
     * Handle image upload.
     */
    public function handleImageUpload(Request $request, ImageManagerInterface $imageManager): RedirectResponse
    {
        $storagePath = storage_path('images/' . Str::uuid() . '.webp');

        $imageManager
            ->decode($request->file('image'))
            ->scale(height: 300)
            ->save($storagePath);
 
        return redirect('/');
    }
}
```

### Image Response Macro

> image(Image $image, null|string|Format|MediaType|FileExtension $format = null, mixed ...$options)

The package includes a response macro that can be used to elegantly encode an
image resource and convert it to an HTTP response in a single step.

The macro automatically takes care of the HTTP headers in the response that
match the image and the desired output format.

The following code example shows how to read an image from disk apply
modifications and use the image response macro to encode it and send the image
back to the user in one call. Only the first parameter is required.

```php
use Illuminate\Support\Facades\Route;
use Illuminate\Support\Facades\Storage;
use Intervention\Image\Format;
use Intervention\Image\Laravel\Facades\Image;

class ImageController extends Controller
{
    /**
     * Respond with an image using the response macro.
     */
    public function respondWithImage(): RedirectResponse
    {
        $image = Image::decode(Storage::get('example.jpg'))
            ->scale(height: 300);

        return response()->image($image, Format::WEBP, quality: 65);
    }
}
```

## Symfony

Intervention Image can also be integrated into the Symfony framework. A convenient way is to
use the [official integration bundle](https://github.com/Intervention/image-symfony).

Although using this integration library is not required, it
offers a convenient way to centrally configure Intervention Image in the Symfony framework.

### Installation

Instead of installing Intervention Image directly, it is only necessary to require the
bundle package `intervention/image-symfony`. The corresponding dependencies 
are automatically installed as well.

```bash
composer require intervention/image-symfony
```

### Application-wide Configuration

After the successful installation, you can activate the bundle in the file
`config/bundles.php` of your Symfony application by inserting the following 
line into the array.

```php
return [
    // ...
    Intervention\Image\Symfony\InterventionImageBundle::class => ['all' => true],
];
```

Now you can configure the driver of Intervention Image. By default, the bundle
is using the GD library with Intervention Image. This and other options can be
configured by creating a file `config/packages/intervention_image.yaml` and
setting the driver class and the default options as follows. 

```yaml
intervention_image:
  driver: Intervention\Image\Drivers\Gd\Driver
  options:
    autoOrientation: true
    decodeAnimation: true
    backgroundColor: 'ffffff'
    strip: false
```

Choose between the drivers `Intervention\Image\Drivers\Gd\Driver`, `Intervention\Image\Drivers\Imagick\Driver` or `Intervention\Image\Drivers\Vips\\Driver`.

You can then use the options to determine the behavior of the library. Read more about the different options for
[driver selection](/v4/basics/configuration-drivers#driver-selection), setting options for 
[auto orientation](/v4/modifying-images/effects#image-orientation-according-to-exif-data), 
[decoding animations](/v4/modifying-images/animations) and 
[background color](/v4/basics/colors).

### Dependency Injection

The integration is now complete and it is possible to access the
[ImageManager](/v4/basics/instantiation) via dependency injection.

```php
namespace App\Controller;

use Intervention\Image\ImageManager;
use Symfony\Component\HttpFoundation\Response;
use Symfony\Component\Routing\Annotation\Route;
use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;

class ExampleController extends AbstractController
{
    #[Route('/')]
    public function example(ImageManager $manager): Response
    {
        $image = $manager->decode('images/example.jpg');
    }
}
```

## Tempest

Intervention Image can be used with the [Tempest framework](https://tempestphp.com/). Although 
using this integration library is not required, the [official bundle](https://github.com/Intervention/image-tempest) offers 
a convenient way to centrally configure the library.

### Installation

Instead of installing Intervention Image directly, it is only necessary to require the
bundle package `intervention/image-tempest`. The dependencies are automatically installed as well.

Install the following package in your Tempest application.

```bash
composer require intervention/image-tempest
```

Now you're ready to configure Intervention Image globally for the framework.

### Application-wide Configuration

You have two configuration options, depending on how much control you need.

#### Basic Configuration

This type of configuration only sets the [driver type](/v4/basics/configuration-drivers#driver-selection). By default, the bundle
is using the GD library with Intervention Image. Depending on your server environment, you may need to adjust this and select from the available drivers.

This can be easily done in the `.env` file as follows.

```
IMAGE_DRIVER="Intervention\\Image\\Drivers\\Imagick\\Driver"
```

Choose between the drivers `Intervention\Image\Drivers\Gd\Driver`, `Intervention\Image\Drivers\Imagick\Driver` or `Intervention\Image\Drivers\Vips\\Driver`.

#### Detailed Configuration

If you're looking for more in-depth configuration, you can skip the `.env` part and publish a more detailed configuration file for Intervention Image by running the following command.

```bash
php tempest install image
```

The call will publish the configuration file `image.config.php` to your local application. Here you can set the [driver](/v4/basics/configuration-drivers#driver-selection) and more detailed configuration options.

The published configuration can be included in version control. The file has the following structure:

```php
use Intervention\Image\Drivers\Gd\Driver as GdDriver;
use Intervention\Image\Tempest\Config as ImageConfig;

use function Tempest\env;

return new ImageConfig(
    /*
    |--------------------------------------------------------------------------
    | Image Driver
    |--------------------------------------------------------------------------
    |
    | Intervention Image supports “GD Library” and “Imagick” to process images
    | internally. Depending on your PHP setup, you can choose one of them.
    |
    | Included options:
    |   - \Intervention\Image\Drivers\Gd\Driver::class
    |   - \Intervention\Image\Drivers\Imagick\Driver::class
    |   - \Intervention\Image\Drivers\Vips\Driver::class
    */

    driver: env('IMAGE_DRIVER', GdDriver::class),

    /*
    |--------------------------------------------------------------------------
    | Configuration Options
    |--------------------------------------------------------------------------
    |
    | These options control the behavior of Intervention Image.
    |
    | - "autoOrientation" controls whether an imported image should be
    |    automatically rotated according to any existing Exif data.
    |
    | - "decodeAnimation" decides whether a possibly animated image is
    |    decoded as such or whether the animation is discarded.
    |
    | - "backgroundColor" Defines the default background & blending color.
    |
    | - "strip" controls if meta data like exif tags should be removed when
    |    encoding images.
    */

    autoOrientation: true,
    decodeAnimation: true,
    backgroundColor: 'ffffff',
    strip: false,
);
```


In addition to the driver selection, you can use the options to determine the behavior of the library. Read more about the different options for
[driver selection](/v4/basics/configuration-drivers#driver-selection), setting options for 
[auto orientation](/v4/modifying-images/effects#image-orientation-according-to-exif-data), 
[decoding animations](/v4/modifying-images/animations) and 
[background color](/v4/basics/colors).

### Dependency Injection

The following code example shows how to inject an [image manager](/v4/basics/instantiation) into your controller. The instance has already been automatically configured according to the config file. Of course, you are not limited to injecting into a controller.

```php
use Intervention\Image\Format;
use Intervention\Image\Interfaces\ImageManagerInterface;
use Tempest\Router\Get;
use Tempest\View\View;

use function Tempest\View\view;

final readonly class HomeController
{
    public function __construct(private ImageManagerInterface $imageManager)
    {
        //
    }

    #[Get(uri: '/')]
    public function __invoke(): View
    {
        // process image
        $image = $this->imageManager
            ->decode('./example.jpg')
            ->scale(height: 300)
            ->encodeUsingFormat(Format::WEBP);

        return view('./home.view.php', dataUri: $image->toDataUri());
    }
}
```
